# aives

./: README.md  package-lock.json  package.json
src/: app.html  style.css
src-tauri/: 2  Cargo.toml  cargo.txt  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/kokoros/src/tts/: koko.rs  phonemizer.rs
src-tauri/src/: ckokoros2.rs  ckokorostream.rs  cmouse.rs  collama.rs  lib.rs  main.rs  stream.rs
src/lib/: border.svelte  modelViewer.svelte  send.svelte  speechStreamer.svelte  star.svelte  vrm.ts
src/routes/: +page.svelte  page_old.svelte
static/worklets/: pcm-player-processor.js
